@@ -17,5 +17,10 @@ fsm_dataflow_invivo --> script for the simulation of the dataflow from the FSM t
 ..._SD --> scripts for spike detection check
 
 
-08/07/21
+08/07/2021
 Intan_Out_comparison_filter --> automated the comparison process between filter outputs of simulink and FPGA
+
+
+10/09/2021
+Intan_Out_comparison_pipe_in --> comparison between the outputs obtained from Intan with the custom architecture enabled checking the pipe in communication
+pipe_in_InOut_comparison --> comparison between input and output of the pipe in custom architecture in Simulink
